# Yolo_classification

./: pyproject.toml
app/: app.py  main.py
config/: config.py
controller/: predict.py
models/: model.py
templates/: home.html
